--- a/exercises/12_motif_analysis.Rmd
+++ b/exercises/12_motif_analysis.Rmd
@@ -297,6 +297,10 @@ curl::curl_download(
 
 # Choose output directory for the output files to be saved
 out_dir <- path.expand("~/Desktop/Genomic_Data_Analysis/Analysis/memes/")
+
+if (!dir.exists(out_dir)) {
+  dir.create(out_dir, recursive = TRUE)
+}
 ```
 
 ```{r}
